@@ -16,7 +16,7 @@ import imp, time, weakref, tempfile, shutil,  os, stat, sys, re
     
 class Template(object):
     """a compiled template"""
-    def __init__(self, text=None, filename=None, uri=None, format_exceptions=False, error_handler=None, lookup=None, output_encoding=None, module_directory=None, cache_type=None, cache_dir=None, module_filename=None, input_encoding=None):
+    def __init__(self, text=None, filename=None, uri=None, format_exceptions=False, error_handler=None, lookup=None, output_encoding=None, module_directory=None, cache_type=None, cache_dir=None, module_filename=None, input_encoding=None, default_filters=['unicode'], imports=None):
         """construct a new Template instance using either literal template text, or a previously loaded template module
         
         text - textual template source, or None if a module is to be provided
@@ -38,9 +38,13 @@ class Template(object):
             self.module_id = "memory:" + hex(id(self))
             self.uri = self.module_id
         
+        self.default_filters = default_filters
+        self.input_encoding = input_encoding
+        self.imports = imports
+        
         # if plain text, compile code in memory only
         if text is not None:
-            (code, module) = _compile_text(text, self.module_id, filename, self.uri, input_encoding)
+            (code, module) = _compile_text(self, text, filename)
             self._code = code
             self._source = text
             ModuleInfo(module, None, self, filename, code, text)
@@ -60,18 +64,18 @@ class Template(object):
                 util.verify_directory(os.path.dirname(path))
                 filemtime = os.stat(filename)[stat.ST_MTIME]
                 if not os.access(path, os.F_OK) or os.stat(path)[stat.ST_MTIME] < filemtime:
-                    _compile_module_file(file(filename).read(), self.module_id, filename, path, self.uri, input_encoding)
+                    _compile_module_file(self, file(filename).read(), filename, path)
                 module = imp.load_source(self.module_id, path, file(path))
                 del sys.modules[self.module_id]
                 if module._magic_number != codegen.MAGIC_NUMBER:
-                    _compile_module_file(file(filename).read(), self.module_id, filename, path, self.uri, input_encoding)
+                    _compile_module_file(self, file(filename).read(), filename, path)
                     module = imp.load_source(self.module_id, path, file(path))
                     del sys.modules[self.module_id]
                 ModuleInfo(module, path, self, filename, None, None)
             else:
                 # template filename and no module directory, compile code
                 # in memory
-                (code, module) = _compile_text(file(filename).read(), self.module_id, filename, self.uri, input_encoding)
+                (code, module) = _compile_text(self, file(filename).read(), filename)
                 self._source = None
                 self._code = code
                 ModuleInfo(module, None, self, filename, code, None)
@@ -153,19 +157,21 @@ class ModuleInfo(object):
             return file(self.template_filename).read()
     source = property(_get_source)
         
-def _compile_text(text, identifier, filename, uri, input_encoding):
-    node = Lexer(text, filename, input_encoding=input_encoding).parse()
-    source = codegen.compile(node, uri, filename)
+def _compile_text(template, text, filename):
+    identifier = template.module_id
+    node = Lexer(text, filename, input_encoding=template.input_encoding).parse()
+    source = codegen.compile(node, template.uri, filename, default_filters=template.default_filters, imports=template.imports)
     cid = identifier
     module = imp.new_module(cid)
     code = compile(source, cid, 'exec')
     exec code in module.__dict__, module.__dict__
     return (source, module)
 
-def _compile_module_file(text, identifier, filename, outputpath, uri, input_encoding):
+def _compile_module_file(template, text, filename, outputpath):
+    identifier = template.module_id
     (dest, name) = tempfile.mkstemp()
-    node = Lexer(text, filename, input_encoding=input_encoding).parse()
-    source = codegen.compile(node, uri, filename)
+    node = Lexer(text, filename, input_encoding=template.input_encoding).parse()
+    source = codegen.compile(node, template.uri, filename, default_filters=template.default_filters, imports=template.imports)
     os.write(dest, source)
     os.close(dest)
     shutil.move(name, outputpath)
